fix(ui): style updates to stately-arrow
